tests/fixtures/errors/not_a_function.lazy
// error: Not a function
//   --> tests/fixtures/errors/not_a_function.lazy:12:10
//    |
// 12 | result = x 10
//    |          ^
//
// Attempted to call a value that is not a function.
//
// help: Only functions can be called with arguments. Make sure this value is a function.

x = 42
result = x 10
result
